# safebox-client

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: main.yml
src/: index.css  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: frontend.rs  helpers.rs  lib.rs  linux.rs  main.rs  server.rs  types.rs  websockets.rs
src/backend/: autonomi.tsx  backend-store.ts  logic.tsx
src/components/: dashboard.tsx  disconnect-button.tsx  disconnected-panel.tsx  language-switcher.tsx  portal.tsx  root-layout.tsx  theme-toggler.tsx
src/components/account/: account-connect.tsx  avatar.tsx
src/components/admin-panel/: admin-panel-layout.tsx  collapse-menu-button.tsx  content-layout.tsx  footer.tsx  menu.tsx  navbar.tsx  sheet-menu.tsx  sidebar.tsx
src/components/navigation/: secondary-level-breadcrumbs.tsx  top-level-breadcrumbs.tsx
src/components/settings/: network-settings.tsx  (+6 more)
src/enums/: errors.ts  frontend-logs.ts  languages.ts  networks.ts  sub-divider-layout.ts
src/form-schemas/: create-account-schema.ts  recover-account-schema.ts  sign-in-schema.ts
src/hooks/: use-clipboard.ts  use-debounced-value.ts  use-store-item.tsx
src/i18n/: config.ts
src/pages/: settings.tsx
src/providers/: connection-provider.tsx  language-provider.tsx  storage-provider.tsx
src/types/: account-user.ts  autonomi-file.ts  payloads.ts  upload-file-event.ts
(+19 files in other folders)
