[package]
name = "SafeBoxClient"
version = "0.1.6"
description = "SafeBox Client"
authors = ["cobite"]
license = "UNLICENSED"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "safeboxclient_lib"
path = "src/lib.rs" 
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
futures = "*"
hex = "*"
warp = "*"
serde_urlencoded = "*"
tauri = { version = "2.2", features = ["protocol-asset"] }
tauri-plugin-shell = "2.2"
tauri-plugin-store = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-dialog = "2.2"
lazy_static = "*"
tauri-plugin-clipboard-manager = "2.2"
tokio = { version = "1", features = ["full"] }
tauri-plugin-sql = { version = "2.2", features = ["sqlite"] }
tauri-plugin-os = "2.2"
base64 = "0.21"
infer = "0.3"
multipart = "0.18" 
bytes = "1.10.1"
dirs = "5"
tokio-tungstenite = "0.20"
anttp = "=0.7.0"
autonomi = "0.4.6"
once_cell = "1.21.3"
tempfile = "3.20.0"
ctrlc = "3.4.7"
tauri-utils = { version = "2" }


[target.'cfg(target_os = "linux")'.dependencies]
warp = "*"
serde_urlencoded = "*"
